--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Urja Farm Eats -Home</title>
+	<title>Urja Farm Eats</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -17,6 +17,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#0b4d02">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#0b4d02">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#0b4d02">
+
+
 
 
 	<!-- CSS only -->
@@ -27,7 +35,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/48f5df0e7d.js" crossorigin="anonymous"></script>
 
 
 	<link rel="shortcut icon" href="images/logo.jpg">
@@ -35,7 +43,38 @@
     <link rel="apple-touch-icon" href="images/logo.jpg">
 
 	
+	<script>
+		function numcount(){
+			const counters = document.querySelectorAll('.counter');
+			const speed = 99;
 
+			counters.forEach(counter =>{
+				const updateCount = () =>{
+					const target = +counter.getAttribute('data-target');
+					var count = +counter.innerText;
+
+					const inc = Math.floor(target/speed);
+
+
+					if(count<target)
+					{
+						counter.innerText = count + inc;
+						setTimeout(updateCount, 20);
+					}
+					else
+					{
+						counter.innerText = target;
+					}
+
+				}
+
+				updateCount();
+			});
+		}
+
+
+
+	</script>
 
 
 
@@ -50,10 +89,10 @@
 
 	<header>
 
-		<div class="logo"><a href="index.html">U<span class="farm-dark">F</span>E</a></div>
+		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">U<span class="farm-dark">F</span>E</a></div>
 		<nav id="nav">
 			<ul>
-				<li><a href="index.html">HOME</a></li>
+				<li><a href="https://urjafarmeats.com/">HOME</a></li>
 				<li><a href="javascript: void(0)" class="active">ABOUT US</a></li>
 				<li><a href="products.html">OUR PRODUCTS</a></li>
 				<li><a href="order.html">ORDER NOW</a></li>
@@ -80,6 +119,170 @@
 		})
 	</script>
 	<br>
+
+
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+<h2 class="text-center topic">Our Work Process</h2>
+
+<div class="delivery-flow text-center">
+	<i class="fas fa-mobile"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="fas fa-truck"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="fas fa-home"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="far fa-grin-beam"></i> 
+</div>
+
+<div class="container">
+	<h2 class="text-center topic">Why to Choose Us?</h2>
+	<p class="why-us">Your safety is our primary concern. Our team is committed to ensure that you get fresh and healthy groceries at your door-step. We also assure fair trade with farmers. Additionally, we ensure hygenic packing, 100% food safety and best in class food quality. We <b>don't</b> use any chemicals and directly provide the groceries from the farm. Our rates too, are lower than the market rates.
+	</p>
+	<p class="covid text-center text-danger">
+		We <b>strictly</b> follow the below specified rules while working.
+		<div class="covid-padding">
+			<div class="row">
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-people-arrows"></i></div>
+						<div class="col-11">All our employees always practise social distancing.</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-hands-wash"></i></div>
+						<div class="col-11">We wash our hands regularly and keep them clean.</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-head-side-mask"></i></div>
+						<div class="col-11">We wear face masks at work and during delivery.</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-handshake-slash"></i></div>
+						<div class="col-11">We strictly make contact-less delivery.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</p>
+
+</div>
+
+
+
+<!--footer-->
+
+
+<div class="grass-img">
+	<img src="images/grass.jpg" class="grass">
+</div>
+
+<footer>
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Reach Out to Us
+					</h3>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="far fa-address-card"></i></div>
+						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya Tawde</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
+						<div class="col-10 footer-contact">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
+						<div class="col-10 footer-contact">+91 9137600428</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
+						<div class="col-10 footer-contact">urjafarmeats@gmail.com</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Social Media Handles
+					</h3>
+					<p class="footer-mid">
+						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
+						<br>
+					</p>
+					<p>
+						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+					</p>
+				</div>
+				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Newsletter
+					</h3>
+					<p class="footer-right">
+						By subscribing to our mailing list you will always get latest offers and updates from us.
+						<br>
+						<form class="text-center footer-form">
+							<input type="email" name="" class="footer-input" placeholder="Type your email" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+						</form>
+					</p>
+					<p class="credits">
+						Created by Abhishek Joshi (+919757468857)<br>for 360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg">
+					</p>
+				</div>
+			</div>
+			<div class="copyright text-center"><i class="far fa-copyright"></i> 2020 Urja Farm Eats. All rights reserved.</div>
+		</div>
+	</div>	
+</footer>
+
 
 
 
