--- a/about.html
+++ b/about.html
@@ -132,20 +132,20 @@
 
 <div class="container">
 	<h2 class="text-center topic">Know About Us</h2>
-	<p class="why-us">We provide <b>unadultrated</b> and <b>fresh</b> Fruits and Vegetables at your door-step. Choose from a wide range of best quality fruits and vegetables available at the lowest prices. Just stay at home and place your order! We will deliver it right to your door-step. Our home delivery service is available from Borivali to Goregaon. <span class="text-danger">We accept bulk orders also</span>. Order the fresh green groceries directly from the farm and <span class="feel">FEEL THE FRESHNESS</span>. We guarantee <b>on-time delivery</b>, and the <b>best quality</b>!
+	<p class="why-us">We provide <b>unadulterated</b> and <b>fresh</b> Fruits and Vegetables at your door-step. Choose from a wide range of best quality fruits and vegetables available at the lowest prices. Just stay at home and place your order! We will deliver it right to your door-step. Our home delivery service is available from Borivali to Goregaon. <span class="text-danger">We accept bulk orders also</span>. Order the fresh green groceries directly from the farm and <span class="feel">FEEL THE FRESHNESS</span>. We guarantee <b>on-time delivery</b>, and the <b>best quality</b>!
 	</p>
-	<p class="covid text-center text-success">
-		Advantages of ordering form us -
+	<p class="covid text-center success-color">
+		Advantages of ordering from us -
 		<div class="covid-padding">
 			<div class="row">
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-carrot"></i></div>
 						<div class="col-11">Safe and best quality groceries only.</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-tags"></i></div>
 						<div class="col-11">Discount for bulk orders.</div>
 					</div>
@@ -153,13 +153,13 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fab fa-creative-commons-nc"></i></div>
 						<div class="col-11"><b>No Extra charge</b> for cancellation.</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-truck"></i></div>
 						<div class="col-11">Delivery within 2 days.</div>
 					</div>
@@ -167,13 +167,13 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-money-bill-wave"></i></div>
 						<div class="col-11"><b>Free</b> home delivery above ₹200.</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-sm-12 covid-rule">
-					<div class="row text-success">
+					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-rupee-sign"></i></div>
 						<div class="col-11">Payment on Delivery.</div>
 					</div>
@@ -183,6 +183,10 @@
 
 	</p>
 </div>
+
+<div class="text-center call-button">
+	<a class="btn btn-danger text-white" href="tel:+919137600428">Call Us Now at +91 9137600428</a>
+</div>	
 
 
 
@@ -261,16 +265,16 @@
 						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya Tawde</div>
 					</div>
 					<div class="row footer-left">
-						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
-						<div class="col-10 footer-contact">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
-					</div>
-					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
 						<div class="col-10 footer-contact">+91 9137600428</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
 						<div class="col-10 footer-contact">urjafarmeats@gmail.com</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
+						<div class="col-10 footer-contact">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
