--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
 				<div class="col-lg-6 col-sm-12 covid-rule">
 					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-tags"></i></div>
-						<div class="col-11">Discount for bulk orders.</div>
+						<div class="col-11">We give major discount for bulk orders.</div>
 					</div>
 				</div>
 			</div>
@@ -161,7 +161,7 @@
 				<div class="col-lg-6 col-sm-12 covid-rule">
 					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-truck"></i></div>
-						<div class="col-11">Delivery within 2 days.</div>
+						<div class="col-11">Get your grocery delivered within 2 days.</div>
 					</div>
 				</div>
 			</div>
@@ -175,7 +175,7 @@
 				<div class="col-lg-6 col-sm-12 covid-rule">
 					<div class="row success-color">
 						<div class="col-1 covid-icon"><i class="fas fa-rupee-sign"></i></div>
-						<div class="col-11">Payment on Delivery.</div>
+						<div class="col-11">We also support 'Payment on Delivery'.</div>
 					</div>
 				</div>
 			</div>
