--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
 </div>
 
 <div class="text-center call-button">
-	<a class="btn btn-danger text-white" href="tel:+919137600428">Call Us Now at +91 9137600428</a>
+	<a class="btn btn-danger text-white" href="tel:+919137600428">Click to Call Us Now at +91 9137600428</a>
 </div>	
 
 
