--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 	<br>
 
 
-<div id="carouselExampleCaptions" class="carousel slide car" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide car" data-ride="carousel" data-interval="4000">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
