--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
 <body>
 
 
+<div id="layer"></div>
 
 
 
@@ -58,7 +59,7 @@
 
 	<header>
 
-		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">Urja<span class="farm-dark">Farm</span>Eats</a></div>
+		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">Urja <span class="farm-dark">Farm </span>Eats</a></div>
 		<nav id="nav">
 			<ul>
 				<li><a href="https://urjafarmeats.com/">HOME</a></li>
@@ -83,7 +84,16 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('.menu-toggle').click(function(){
-				$('nav').toggleClass('active')
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+			})
+		})
+
+		$(document).ready(function(){
+			$('#layer').click(function(){
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+				$('#toggle').toggleClass('change');
 			})
 		})
 	</script>
