--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
 
-
+<div id="layer"></div>
 
 
 
@@ -114,7 +114,16 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('.menu-toggle').click(function(){
-				$('nav').toggleClass('active')
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+			})
+		})
+
+		$(document).ready(function(){
+			$('#layer').click(function(){
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+				$('#toggle').toggleClass('change');
 			})
 		})
 	</script>
@@ -149,7 +158,7 @@
 		window.onscroll = function() {
 			if(document.body.scrollTop > 250 || document.documentElement.scrollTop > 250)
 			{
-				document.getElementById('logo').innerHTML = '<img src="images/logo.jpg">Urja<span class="farm-dark">Farm</span>Eats';
+				document.getElementById('logo').innerHTML = '<img src="images/logo.jpg">Urja <span class="farm-dark">Farm </span>Eats';
 			}
 			else
 			{
