--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
 		<h1 class="text-center banner-title">Urja <span class="farm-dark">Farm</span> Eats</h1>
 		<h3 class="banner-tagline text-center"><i>...Feel the Freshness</i></h3>
 		<h4 class="text-center banner-text">We sell over <b><span class="counter" data-target="99">0</span></b> different fruits and vegetables!</h4>
+		<div class="text-center call-button">
+			<a class="btn btn-danger text-white calling-button" href="tel:+919137600428">Click to Call Us Now at +91 9137600428</a>
+		</div>
 		<div class="text-center banner-btn">
-			<a href="order.html" class="banner-btn1">Order Online</a>
-			<a href="products.html" class="banner-btn2">Our Products</a>
+			<a href="products.html" class="banner-btn2">View Our Products</a>
 		</div>
 	</div>
 
@@ -209,6 +211,8 @@
 	</p>
 
 </div>
+
+
 
 <h2 class="text-center topic">Our Work Process</h2>
 
