--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Urja Farm Eats -Home</title>
+	<title>Urja Farm Eats</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -17,6 +17,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#0b4d02">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#0b4d02">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#0b4d02">
+
+
 
 
 	<!-- CSS only -->
@@ -27,7 +35,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/48f5df0e7d.js" crossorigin="anonymous"></script>
 
 
 	<link rel="shortcut icon" href="images/logo.jpg">
@@ -35,7 +43,7 @@
     <link rel="apple-touch-icon" href="images/logo.jpg">
 
 	
-
+	
 
 
 
@@ -43,6 +51,7 @@
 <body>
 
 
+<div id="layer"></div>
 
 
 
@@ -50,13 +59,12 @@
 
 	<header>
 
-		<div class="logo"><a href="index.html">U<span class="farm-dark">F</span>E</a></div>
+		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">Urja <span class="farm-dark">Farm </span>Eats</a></div>
 		<nav id="nav">
 			<ul>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
-				<li><a href="javascript: void(0)" class="active">OUR PRODUCTS</a></li>
-				<li><a href="order.html">ORDER NOW</a></li>
+				<li><a href="https://urjafarmeats.com/">HOME</a></li>
+				<li><a href="about.html" class="active">ABOUT US</a></li>
+				<li><a href="products.html">OUR PRODUCTS</a></li>
 				<li><a href="contact.html">CONTACT US</a></li>
 			</ul>
 		</nav>
@@ -75,13 +83,321 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('.menu-toggle').click(function(){
-				$('nav').toggleClass('active')
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+			})
+		})
+
+		$(document).ready(function(){
+			$('#layer').click(function(){
+				$('nav').toggleClass('active');
+				$('#layer').toggleClass('layer0');
+				$('#toggle').toggleClass('change');
 			})
 		})
 	</script>
 	<br>
-	<div class="banner">
-		<br>
+	<br>
+	<br>
+
+<h2 class="text-center topic-products">Our Products</h2>
+
+<br>
+
+
+<div class="container product-container">
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 col-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 product">
+            <div class="card product-card">
+                <div class="card-img-top product-image">
+                	<img src="images/logo.jpg" class="food-image">
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="col-8 product-name">Product</h5>
+                        <p class="col-4 product-price">$XX</p>
+                    </div>
+                    <div class="in-stock">In Stock</div> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!--footer-->
+
+
+<div class="grass-img">
+	<img src="images/grass.jpg" class="grass">
+</div>
+
+<footer>
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Reach Out to Us
+					</h3>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="far fa-address-card"></i></div>
+						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya Tawde</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
+						<div class="col-10 footer-contact">+91 9137600428</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
+						<div class="col-10 footer-contact">urjafarmeats@gmail.com</div>
+					</div>
+					<div class="row footer-left">
+						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
+						<div class="col-10 footer-contact">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Social Media Handles
+					</h3>
+					<p class="footer-mid">
+						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
+						<br>
+					</p>
+					<p>
+						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
+					</p>
+				</div>
+				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
+						Newsletter
+					</h3>
+					<p class="footer-right">
+						By subscribing to our mailing list you will always get latest offers and updates from us.
+						<br>
+						<form class="text-center footer-form">
+							<input type="email" name="" class="footer-input" placeholder="Type your email" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+						</form>
+					</p>
+					<p class="credits">
+						Created by Abhishek Joshi (+919757468857)<br>for 360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg">
+					</p>
+				</div>
+			</div>
+			<div class="copyright text-center"><i class="far fa-copyright"></i> 2020 Urja Farm Eats. All rights reserved.</div>
+		</div>
+	</div>	
+</footer>
+
 
 
 
