--- a/about.html
+++ b/about.html
@@ -307,7 +307,7 @@
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
 						<form class="text-center footer-form">
-							<input type="email" name="" class="footer-input" placeholder="Type your email" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+							<input type="text" name="" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
 						</form>
 					</p>
 					<p class="credits">
